# mcp_docs

./: .gitignore  config_manager.py  crawler_config.yaml  crawler_config_angr.yaml  crawler_config_langsmith.yaml  crawler_config_litellm.yaml  crawler_config_r2ai.yaml  crawler_config_rizin.yaml  doc_crawler.py  generate_llms_txt.py  html_processor.py  main.py  mcp_java_sdk_llms.txt  mcp_llms.txt  mcp_python_sdk_llms.txt  normalize_file.sh  openrouter_client.py  output_manager.py  pyproject.toml  radare2_llms.txt
docs_output/angr/: angr_llms.txt  crawl_summary.json
docs_output/angr/en/: latest.md
docs_output/langsmith/: .md  changelog.md  crawl_summary.json  evaluation.md  langsmith_llms.txt  observability.md  self_hosting.md
docs_output/litellm/: crawl_summary.json  docs.md  litellm_llms.txt
docs_output/mcp/: clients.md  crawl_summary.json  examples.md  faqs.md  introduction.md  llms-full.txt  mcp_llms.txt
docs_output/mcp-python-sdk/: crawl_summary.json  mcp-python-sdk_llms.txt
docs_output/n8n/: 1-0-migration-checklist.md  advanced-ai.md  choose-n8n.md  code.md  courses.md  crawl_summary.json  credentials.md  data.md  embed.md  external-secrets.md  flow-logic.md  glossary.md  hosting.md  index.md  insights.md  integrations.md  learning-path.md  license-key.md  log-streaming.md  n8n_llms.txt  privacy-security.md  source-control-environments.md  sustainable-use-license.md  try-it-out.md  user-management.md  video-courses.md  workflows.md
docs_output/r2ai/: crawl_summary.json  r2ai_llms.txt
docs_output/rizin/: crawl_summary.json  rizin_llms.txt
(+1747 files in other folders)
